Remove commented out section in pom.xml