@@ -215,8 +215,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!--Extra memory to prevent jvm crash during heavy Integration/unit test with newer lombok and jdk8-->
-          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
           <classpathDependencyExcludes>
             <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
           </classpathDependencyExcludes>
